# CookiePowder

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml  requirements_dev.txt  tox.ini
cookiepowder/: cookiecutter.json  requirements_dev.txt
cookiepowder/cookiecutter_pypackage.egg-info/: SOURCES.txt
cookiepowder/docs/: conf.py
cookiepowder/{{cookiecutter.project_slug}}/: README.md  gen_django_secret.py  pyproject.toml
cookiepowder/{{cookiecutter.project_slug}}/docs/sphinx/: index.md
cookiepowder/{{cookiecutter.project_slug}}/tasks/: docs.py
cookiepowder/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: settings.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  dev-guide.md  gen_django_secret.py  invoke.yaml  manage.py  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: pytest.yaml  release.yaml  tox.yaml
{{cookiecutter.project_slug}}/docs/: CONTRIBUTING.md
{{cookiecutter.project_slug}}/docs/source/: changelog.md  conf.py  contributing.md  index.md
{{cookiecutter.project_slug}}/docs/sphinx/: index.md
{{cookiecutter.project_slug}}/tasks/: __init__.py  clean.py  docs.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/: settings.py  urls.py
