[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiepowder"
version = "0.1.0"
description = "Cookiecutter template for a Django-Python package using pyproject.toml"
authors = [
    {name = "Ben Blair", email = "example@example.com"},
    {name = "Jacob Tumak", email = "example@example.com"},
]
license = "BSD"
urls = [
    {name = "Repository", url = "https://github.com/audreyr/cookiecutter-pypackage"} #TODO change urls
]
keywords = ["cookiecutter", "template", "package", "django", "pyproject.toml-based"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: PyCharm",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development"
]
requires-python = ">=3.7, <4"


[project.dependencies]
test = [
    "pytest-cookies >= 0.7.0",
    "tox >= 4.6.3",
]

