# Project Configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiepowder"
version = "0.1.0"
requires-python = ">=3.7"
description = "Cookiecutter template for Django/Python packages using pyproject.toml"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ben Blair", email = "benchrisblair@users.noreply.github.com"},
    {name = "Jacob Tumak", email = "JacobTumak@users.noreply.github.com"},
]
keywords = ["cookiecutter", "template", "package", "django", "pyproject.toml-based"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development"
]

[project.optional-dependencies]
dev = [
    "cookiecutter>=2.1.0",
    "pytest>=3.9.0",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=4.1.0",
    "pytest-sugar>=0.9.7",
    "tox>=4.6.3",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-bugbear>=23.6.5",
]

[project.urls]
Homepage = "https://github.com/JacobTumak/CookiePowder"
Repository = "https://github.com/JacobTumak/CookiePowder"


# Other Tools
[tool.black]
target-version = ["py37","py38","py39","py310","py311"]

[tool.isort]
profile = "black"
skip_gitignore = true