# Project Configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
requires-python = "{{ cookiecutter.python_version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }
]
keywords = ["{{ cookiecutter.project_slug }}",]
{%- set license_classifiers = {
    "MIT License": "License :: OSI Approved :: MIT License",
    "BSD License": "License :: OSI Approved :: BSD License",
    "ISC License": "License :: OSI Approved :: ISC License (ISCL)",
    "Apache Software License 2.0": "License :: OSI Approved :: Apache Software License",
    "GNU General Public License v3": "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
} %}
classifiers = [
    "Development Status :: 4 - Beta",
    {%- if cookiecutter.open_source_license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.open_source_license] }}",
    {%- endif %}
    "Intended Audience :: {{ cookiecutter.intended_audience }}",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Framework :: Django",
]
dependencies = [
    "django",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]
style = [
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
]
test = [
    "tox",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-sugar",
]
utils = [
    "invoke",
    "bumpver",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Documentation = "https://{{ cookiecutter.project_slug }}.readthedocs.io"

[project.scripts]
"manage.py" = "{{ cookiecutter.project_slug }}:django_manage"


# Other Tools
[tool.setuptools]
include-package-data = true  # True by default, declarations in MANIFEST.in

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.project_slug }}", "{{ cookiecutter.project_slug }}.*"]

[tool.bumpver]
current_version = "{{ cookiecutter.version }}"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version: {old_version} --> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"README.md" = ['Version: {version}']
"{{ cookiecutter.project_slug }}/__init__.py" = ['__version__ = "{version}"']
"docs/source/conf.py" = ["version = '{version}'", "release = '{version}'"]

[tool.black]
target-version = ["py38","py39","py310","py311"]

[tool.isort]
profile = "black"
skip_gitignore = true